--- a/main/static/css/business-casual.css
+++ b/main/static/css/business-casual.css
@@ -5,7 +5,7 @@
  */
 body {
   font-family: 'Lora';
-  background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg.jpg");
+  background: linear-gradient(rgba(145, 133, 129, 0.65), rgba(145, 133, 129, 0.65)), url("../img/appliances-1.png");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -74,12 +74,12 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(29, 174, 196, 0.9);
   font-family: 'Raleway';
 }
 
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: #ff8c00;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -88,7 +88,7 @@ p {
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: #ff8c00;
 }
 
 @media (min-width: 992px) {
@@ -99,7 +99,7 @@ p {
     color: rgba(255, 255, 255, 0.4);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e6a756;
+    color: #ff8c00;
   }
 }
 
@@ -224,11 +224,12 @@ p {
 }
 
 .footer {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(29, 174, 196, 0.9);
 }
 
 .text-primary {
-  color: #e6a756 !important;
+  color: #ff8c00 !important;
+  text-shadow: -1px -1px 0 black;
 }
 
 .bg-primary {
