--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -42,16 +42,16 @@
             <li class="nav-item  px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/">Home</a>
             </li>
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/service_area">Service Area
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="/service_area">Service Area</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/about">About</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/contact">Contact</a>
+            <li class="nav-item active px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="/contact">Contact
+                <span class="sr-only">(current)</span>
+              </a>
             </li>
           </ul>
         </div>
