--- a/main/templates/warranty.html
+++ b/main/templates/warranty.html
@@ -64,14 +64,30 @@
 
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static "img/2.JPG" %}" alt="">
         <div class="about-heading-content">
+          <div class="row">
+            </br>
+            </br>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <img class="img-fluid rounded" src="{% static "img/SpeedQueen.jpg" %}" alt="">
+            </div>
+            <div class="col-lg-6">
+              <img class="img-fluid rounded" src="{% static "img/Scotsman.png" %}" alt="">
+              <img class="img-fluid rounded" src="{% static "img/Scotsman.jpg" %}" alt="">
+            </div>  
+          </div>
+          <div class="row">
+          </br>
+          </br>
+        </div>
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
                   <span class="section-heading-upper">Warranty Service</span>
-                  <span class="section-heading-lower">Provided on Speed Queen and Scotsman brands.</span>
+                  <span class="section-heading-lower">Provided on Speed Queen and Scotsman products.</span>
                 </h2>
                 <p></p>
               </div>
